classDiagram
    Obra *-- NodoEap : contém raiz
    Obra o-- EtapaObra : possui
    Obra o-- Empresa : contratada

    OrcamentoInsumo --> Insumo : referencia
    OrcamentoComposicao --> Composicao : referencia

    OrcamentoInsumo --|> Orcamento : é um
    OrcamentoComposicao --|> Orcamento : é um

    EtapaObra *-- Orcamento : possui

    Composicao *-- ItemComposicao : possui
    ItemComposicao o-- Insumo : pode ser
    ItemComposicao o-- Composicao : pode ser auxiliar

        class Obra{
            -String descricao
            -Status status
            -Empresa empresa
            -UnidadeFederativa uf
            -ZoneId fusoHorario
            -NodoEap arvoreEap
            -List~EtapaObra~ etapas
            -Stack~EtapaObra~ historicoEtapas
        }

        class NodoEap {
            -String nome
            -NodoEap pai
            -List~NodoEap~ filhos
            -EtapaObra etapa
        }

        class EtapaObra{
            -String descricao
            -DateTime inicio
            -DateTime fim
            -Period prazoEsperado
            -List~EtapaObra~ preRequisitos
            -List~Orcamento~ orcamentos
        }

        class Insumo {
            -UUID id
            -String codigo
            -String descricao
            -UnidadeMedida unidade
            -Decimal preco
        }

        class Composicao {
            -UUID id
            -String codigo
            -String descricao
            -UnidadeMedida unidade
            -Decimal preco
            -List~ItemComposicao~ itens
        }

        class ItemComposicao {
            -Decimal coeficiente
            -Insumo insumo
            -Composicao composicaoAuxiliar
        }

        class UnidadeMedida {
        <<enumeration>>
        }

        class Orcamento {
            <<abstract>>
        }

        class OrcamentoInsumo {
            -Insumo tipo
            -Decimal quantidade
        }

        class OrcamentoComposicao {
            -Composicao tipo
            -Decimal quantidade
        }

        class UnidadeFederativa {
            <<enumeration>>
        }

        class Empresa{
        }